fdo#84009: Be sure to update the sheet index when moving the sort range.

Change-Id: Ic9ad51b33f6dfb6f90e76439c27eeff25ec4c7da
(cherry picked from commit 5fd4679e7b92f344ea867e0dca1fc4c9363ae2cd)