sc/source/ui/docshell/dbdocfun.cxx
@@ -459,6 +459,7 @@ bool ScDBDocFunc::Sort( SCTAB nTab, const ScSortParam& rSortParam,
             return false;
 
         aLocalParam.MoveToDest();
+        nTab = aLocalParam.nDestTab;
     }
 
     ScEditableTester aTester( pDoc, nTab, aLocalParam.nCol1,aLocalParam.nRow1,
